@@ -78,12 +78,12 @@ function assert_have_python_and_sympy (pyexec, verbose)
     disp ('')
     disp (getenv ('PATH'))
 
-    if (ispc () && (~isunix ()))
-      disp ('')
-      disp ('  * Did you install the Symbolic bundle for Windows that includes Python?')
-      disp ('    Please refer to the installation notes for Windows users at')
-      disp ('    <https://github.com/cbm755/octsympy/wiki/Notes-on-Windows-installation>')
-    end
+    # if (ispc () && (~isunix ()))
+    #   disp ('')
+    #   disp ('  * Did you install the Symbolic bundle for Windows that includes Python?')
+    #   disp ('    Please refer to the installation notes for Windows users at')
+    #   disp ('    <https://github.com/cbm755/octsympy/wiki/Notes-on-Windows-installation>')
+    # end
     return
   end
 
